--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "./shared/header" %>
   <div class="chatroom flex">
     <div class="leftbar flex flex-col">
-      <div class="box-border border-b bg-light_sladock border-sladock_border h-16">
+      <div class="box-border border-b bg-light_sladock border-sladock_border h-16 flex items-center pl-10">
         <h3 class="chatroomName text-white font-bold text-lg">
           <%= @workspace.name %>
         </h3> 
@@ -9,7 +9,7 @@
       <div class="bg-light_sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= @workspace.id %>" data-notification-channel="<%= @channel&.id || 0 %>" data-notification-direct="<%= @directmsg&.id || 0 %>" data-notification-user="<%= current_user.nickname %>">
         <%= render "./shared/leftbar" %>
       </div>
-    </div>
+    </div>  
     <div class="flex flex-col flex-grow min-w-0 min-h-0">
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
       <div class="box-border border-b border-gray-400 h-16 font-bold flex justify-between items-center">
@@ -38,7 +38,6 @@
         <% else %>
           <%= render "./shared/msgform_direct" %>
         <% end %>
-<<<<<<< HEAD
     </div>   
   </div>       
   <div class="w-full h-full absolute hidden popup bg-black bg-opacity-25">
@@ -71,32 +70,12 @@
       </div>
     <% end %> 
   </div>
-  <div class="ch-background absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
-    <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
-      <div class="flex justify-between">
-        <h5 class="font-bold"><%= t("invite.add_people") %></h5>
-        <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
-      </div>
-      <span class="text-xs text-gray-600">#<%= @channel.name %></span>
-      
-        <%= form_with(url: invite_channel_users_channels_path(@channel.id),method: "POST",local: true) do |f| %>
-        <div class="flex">
-          <%= f.text_field :name,placeholder:t("invite.placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded flex-grow placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
-          <div>
-            <%= f.submit t("invite.send"),class:"invite-btn cursor-pointer font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none",disabled: true %>
-          </div>
-        </div>
-        <% end %>
-      <div class="search-data hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
-      </div>
-=======
-      </div>  
->>>>>>> 修改ws_new頁面、修改聊天室畫面、修改邀請code、修改錯誤訊息、增加i18n
-    </div>
+
+    
   <%= render './shared/right_info' %>
   <% if @channel %>
     <%= render './shared/invite_ch' %>
   <% end %>
+   <%= render './channels/new', channel: @new_channel %>
 
-
-
+ 
