邀請完成初步、修改view

--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -5,9 +5,9 @@
     <span class="pl-3">new</span>
   </div>
 <% end%>
-<div class="messages_child pl-5">
+<div class="messages_child">
   <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2">
-    <div class="txt flex">
+    <div class="txt flex pl-5">
       <div class="author font-bold mr-2">
         <%= message.user.nickname %>
       </div>
