--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,5 +1,5 @@
 <%= render "./shared/header" %>
-  <div class="chatroom flex">
+<div class="chatroom flex">
     <div class="leftbar flex flex-col">
       <div class="box-border border-b bg-light_sladock border-sladock_border h-16 flex items-center pl-10">
         <h3 class="chatroomName text-white font-bold text-lg">
@@ -16,14 +16,14 @@
         #<%=  @channel.try(:name) || @directmsg.try(:name) %>
           <%# button %>  
         <% if @channel %>
-          <button class="invite-ch-btn h-8 w-8  rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none">
+          <button class="invite-ch-btn h-8 w-8 rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none">
             <%= inline_svg_pack_tag( "media/images/invite-ch.svg" , class: "stroke-current text-gray-600 hover:stroke-gray") %>
             <%= image_pack_tag("invite-ch.svg") %>
           </button>
         <% end %>
       </div>
       <%# 訊息區 %>
-      <div class="messages_area break-all flex flex-col-reverse overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300 " data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>"
+      <div class="messages_area break-all flex flex-col-reverse overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>"
       data-subscribe-recipient="<%= current_user.id %>">
         <div class="pb-5 messages" data-target="subscribe.messages">
           <% (@channel || @directmsg).messages.order(:created_at).each do |msg| %>
@@ -32,50 +32,50 @@
         </div>
       </div>
       <%# 訊息輸入框 %>
-      <div>  
+      <div data-controller="subscribe">
         <% if @channel %>
         <%= render "./shared/msgform" %> 
         <% else %>
           <%= render "./shared/msgform_direct" %>
         <% end %>
-    </div>   
-  </div>       
-  <div class="w-full h-full absolute hidden popup bg-black bg-opacity-25">
-    <%= form_with model: @message, url: add_messages_path(locale: 'zh-TW'), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto" do |f|%>
-      <div class="flex flex-wrap mb-6">
-        <div class="w-full flex share-title justify-between">
-          <p class="text-2xl font-bold mt-3 ml-1"> Share this message</p>
-          <div class="cancel-img mt-4 mr-2">
-            <%= inline_svg_pack_tag("media/images/cancel.svg", class:"h-8 w-8 pr-2 cancel") %>
+      </div>
+    </div>    
+    <div class="w-full h-full absolute hidden popup bg-black bg-opacity-25">
+      <%= form_with model: @message, url: add_messages_path(locale: 'zh-TW'), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto" do |f|%>
+        <div class="flex flex-wrap mb-6">
+          <div class="w-full flex share-title justify-between">
+            <p class="text-2xl font-bold mt-3 ml-1"> Share this message</p>
+            <div class="cancel-img mt-4 mr-2">
+              <%= inline_svg_pack_tag("media/images/cancel.svg", class:"h-8 w-8 pr-2 cancel") %>
+            </div>
+          </div>
+          <div class="w-full px-3 mt-4">
+            <%= f.label :messageable_id, "Share with", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
+            <%= f.select :messageable_id, options_for_select(@channels.map { |channel| [channel.name, channel.id] }), class:"appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
           </div>
         </div>
-        <div class="w-full px-3 mt-4">
-          <%= f.label :messageable_id, "Share with", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-          <%= f.select :messageable_id, options_for_select(@channels.map { |channel| [channel.name, channel.id] }), class:"appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
+        <div class="flex flex-wrap mb-6">
+          <div class="w-full px-3">
+              <%= f.label :content, "Message", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
+              <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
+          </div>
         </div>
-      </div>
-      <div class="flex flex-wrap mb-6">
-        <div class="w-full px-3">
-            <%= f.label :content, "Message", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-            <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
+        <%= f.hidden_field :share_message_id, value: '', id: 'share_message_id' %>
+        <div class="flex flex-wrap mb-6 px-3 mt-4">
+          <div class="w-full px-3 border-l-4 select-message">
+          </div>
         </div>
-      </div>
-      <%= f.hidden_field :share_message_id, value: '', id: 'share_message_id' %>
-      <div class="flex flex-wrap mb-6 px-3 mt-4">
-        <div class="w-full px-3 border-l-4 select-message">
+        <div class="flex flex-row-reverse mb-4 mr-2">
+          <%= f.submit "share", class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
         </div>
-      </div>
-      <div class="flex flex-row-reverse mb-4 mr-2">
-        <%= f.submit "share", class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
-      </div>
-    <% end %> 
-  </div>
+      <% end %> 
+    </div>
 
-    
   <%= render './shared/right_info' %>
   <% if @channel %>
     <%= render './shared/invite_ch' %>
   <% end %>
-   <%= render './channels/new', channel: @new_channel %>
+</div>
+<%= render './channels/new', channel: @new_channel %>
 
  
