--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
           <img img src="https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32" class="leading-5 transition ease-in-out duration-150" id="options-menu" aria-haspopup="true" aria-expanded="true">
         </span>
       </div>
-      <div class="open mt-2 w-56 rounded-md shadow-lg hidden absolute right-0">
+      <div class="open mt-2 w-56 rounded-md shadow-lg hidden absolute right-0 z-40">
         <div class="rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical"   aria-labelledby="options-menu">
           <div class="pl-2 py-1 flex ">
             <img src="https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32" alt="" >
