--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -13,7 +13,7 @@
     <div class="flex flex-col flex-grow min-w-0 min-h-0">
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
       <div class="box-border border-b border-gray-400 h-16 font-bold flex justify-between items-center">
-        #<%=  @channel.try(:name) || @directmsg.try(:name) %>
+        #<%=  @channel.try(:name) || @directmsg_user_name %>
           <%# button %>  
         <% if @channel %>
           <button class="invite-ch-btn h-8 w-8 rounded hover:bg-gray-100 hover:stroke-gray active:bg-gray-400 focus:outline-none">
