--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -2,5 +2,41 @@
 <div class="info hidden w-1/6 min-w-200 border-l border-gray-400">
   <div class="box-border border-b border-gray-400 h-16">
     <button class="info-cancel">X</button>
+    <h1>Thread</h1>
+    <p>Channel: <%= @channel.name %></p>
   </div>
+  <div class="parent-message">
+    <div class="author font-bold">
+      <%= @thread.user.nickname %>
+    </div>
+    <div class="createtime">
+      <%= @thread.created_at %>
+    </div>
+    <div class="content">
+      <%= @thread.content %>
+    </div>
+  </div>
+
+  <h2>
+    ===== 有 <%= @thread.children.count %> 則回覆 =====
+  </h2>
+
+  <div class="children-message">
+    <% @thread.children.each do |thread| %>
+      <div class="author font-bold">
+      <%= thread.user.nickname %>
+      </div>
+      <div class="createtime">
+        <%= thread.created_at %>
+      </div>
+      <div class="content">
+        <%= thread.content %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="thread-form">
+    <%= render 'threads/threadform' %>
+  </div>
+  
 </div>
