--- a/app/views/threads/_threadform.html.erb
+++ b/app/views/threads/_threadform.html.erb
@@ -1,7 +1,7 @@
 <div class="">
   <%= form_with(model: @message, url:channel_message_threads_path(@channel, @thread), id:"new_thread", class: "border-2 border-gray-200 rounded w-full text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500") do |f| %>
     <div class="flex">
-      <%= f.text_field :content, placeholder: t(".placeholder") %>
+      <%= f.text_field :content, placeholder: t(".placeholder"), id: "thread-form-content" %>
       <%= f.submit t("utilities.submit"), class: "ml-auto bg-gray-500 shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
     </div>
   <% end %>
