Fix image_pack_tag settings in following files   app/views/pages/index.html.erb   app/views/pages/login.html.erb   app/views/shared/_nav.html.erb   app/views/workspaces/index.html.erb

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,7 +2,7 @@
 <div class="nav">
   <nav class="container mx-auto py-3 flex items-center justify-center">
     <h1 class="w-1/6">
-      <%= link_to image_pack_tag("Slack_logo_new.png"),pages_path %>
+      <%= link_to image_pack_tag("media/images/Slack_logo_new.png"),pages_path %>
     </h1>
   </nav>
 </div>
