--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-white border-b border-gray-400">
   <nav class="py-1">
     <h1 class="w-1/12">
-      <%= link_to image_pack_tag("Slack_logo_new.png"),pages_path %>
+      <%= link_to image_pack_tag("media/images/Slack_logo_new.png"),pages_path %>
     </h1>
 </div>
 <body class="bg-light_gray">
