--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
 <div class="bg-white border-b border-gray-400">
   <nav class="container mx-auto py-3 flex items-center justify-between">
     <h1 class="w-1/12">
-      <%= link_to image_pack_tag("Slack_logo_new.png"),pages_path %>
+      <%= link_to image_pack_tag("media/images/Slack_logo_new.png"),pages_path %>
     </h1>
 <div>
       <% if user_signed_in? %>
