--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -25,6 +25,9 @@
               255
             </div>              
           </div>
+          <%= image_tag f.object.image_url if f.object.cached_image_data %>
+          <%= f.hidden_field :image, value: f.object.cached_image_data %>
+          <%= f.file_field :image %>  
           <%= f.submit t("utilities.submit"),
               class:"create-ws-btn cursor-pointer block font-bold text-white px-20 py-2 mb-5 mr-auto bg-green-800 rounded focus:outline-none"
           %>
@@ -39,8 +42,3 @@
       </div>
     </div>
   </div>
-
-
-
-
-
