--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -12,3 +12,7 @@
 .txtcolumn:hover .share-btn{
   display: block;
 }
+
+.select2-container .select2-selection--single .select2-selection__rendered{
+  width: 300px;
+}
