add js for realtime change thread count

--- a/app/views/shared/_right_panel.html.erb
+++ b/app/views/shared/_right_panel.html.erb
@@ -5,7 +5,7 @@
 <br>
 <%= render 'threads/thread_messages', thread: @thread %>
 
-<h2>
+<h2 data-target="subscribe.threadcount" threadcount="<%= @thread.children.count %>">
   ===== 有 <%= @thread.children.count %> 則回覆 =====
 </h2>
 
