--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -5,11 +5,11 @@
     @apply bg-blue-500 text-white;
   }
 
-.txtcolumn .share-btn{
+.txtcolumn .react-bar{
   display: none;
 }
 
-.txtcolumn:hover .share-btn{
+.txtcolumn:hover .react-bar{
   display: block;
 }
 
