--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,14 +1,10 @@
 <%= render "./shared/header" %>
 <div class="chatroom flex">
     <div class="leftbar flex flex-col">
-      <div class="box-border border-b bg-light_sladock border-sladock_border h-16 flex items-center pl-10">
-        <h3 class="chatroomName text-white font-bold text-lg">
-          <%= @workspace.name %>
-        </h3> 
-      </div>
-      <div class="bg-light_sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= @workspace.id %>" data-notification-channel="<%= @channel&.id || 0 %>" data-notification-direct="<%= @directmsg&.id || 0 %>" data-notification-user="<%= current_user.nickname %>">
-        <%= render "./shared/leftbar" %>
-      </div>
+      <%= render "./shared/leftbar", workspace: @workspace, 
+                                     channels:  @channels,
+                                     unread_msg_bol: @unread_msg_bol,
+                                     unread_msg_count: @unread_msg_count %>
     </div>  
     <div class="flex flex-col flex-grow min-w-0 min-h-0">
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
@@ -23,8 +19,7 @@
         <% end %>
       </div>
       <%# 訊息區 %>
-      <div class="messages_area break-all flex flex-col-reverse overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>"
-      data-subscribe-recipient="<%= current_user.id %>">
+      <div class="messages_area break-all flex flex-col-reverse overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300" data-controller="subscribe"  data-subscribe-id="<%= @workspace.id %>" data-subscribe-channel="<%= @channel&.id || 0 %>" data-subscribe-direct="<%= @directmsg&.id || 0 %>">
         <div class="pb-5 messages" data-target="subscribe.messages">
           <% (@channel || @directmsg).messages.order(:created_at).each do |msg| %>
             <%= render "messages/message_broadcast" , message: msg %>
@@ -34,7 +29,7 @@
       <%# 訊息輸入框 %>
       <div data-controller="subscribe">
         <% if @channel %>
-        <%= render "./shared/msgform" %> 
+          <%= render "./shared/msgform" %> 
         <% else %>
           <%= render "./shared/msgform_direct" %>
         <% end %>
