--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -15,11 +15,14 @@
         <div class="createtime mr-2">
           <%= message.created_at.strftime("%I:%M") %>
         </div>
-         <div class="content">
-            <%= message.content %>
-         </div>
-          <% if message.share_message_id.present? %>
-            <div class="m-2 border-l-4 border-gray-600">
+        <div class="content">
+          <%= message.content %>
+        </div>
+        <div class="file">
+          <%= image_tag message.document(:small).url if message.document.mime_type.include? "image" %>
+        </div>
+        <% if message.share_message_id.present? %>
+          <div class="m-2 border-l-4 border-gray-600">
             <div class="ml-2 font-bold"> <%= message.share_message.user.nickname %> </div>
             <div class="ml-2"> <%= message.share_message.content %> </div>
           </div> 
