--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% end%>
 <div class="messages_child">
-  <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2" data-controller="emoji">
+  <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2" data-controller="emoji" data-id =<%= message.id %>>
     <div class="txt flex pl-5">
       <div class="author font-bold mr-2">
         <%= message.user.nickname %>
@@ -33,7 +33,7 @@
           </div> 
         <% end %>
         <div class="reaction-emoji" data-target="emoji.reaction">
-          <% message.emoji.data.each do |key,value|%>
+          <% message.emoji_data.each do |key, value| %>
           <span><%= key %></span>
           <span><%= value.length %></span>
           <% end %>
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="react-bar absolute right-0  mr-10 -mt-3 flex">
-      <div class="emoji-trigger" data-action="click->emoji#click">Emoji</div>
+      <button class="emoji-trigger" data-action="click-> emoji#click" ">Emoji</button>
       <% if controller_name != "directmsgs"%>
         <button class= "share-btn btn btn-blue" data-id="<%= message.id %>">share</button>
       <% end %>
