--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -1,4 +1,4 @@
-  <% if !@divide_exist && @last_enter_at && (@last_enter_at < message.created_at) %>
+<% if !@divide_exist && @last_enter_at && (@last_enter_at < message.created_at) %>
   <% @divide_exist = true %>
   <div class='flex text-right divide'>
     <span class='h-0 border-b-0 border-t-2 block flex-grow border-red-600 my-auto'></span>
@@ -16,10 +16,14 @@
           <%= message.created_at.strftime("%I:%M") %>
         </div>
         <div class="content">
-          <%= message.content %>
+            <%= message.content %>
         </div>
         <div class="file">
-          <%= image_tag message.document(:small).url if message.document.mime_type.include? "image" %>
+          <% if message.attachfiles.empty? != true %>
+            <% message.attachfiles.each do |file|%>
+              <%= image_tag file.document(:small).url if file.document.mime_type.include? "image" %>
+            <% end %>
+          <% end %>
         </div>
         <% if message.share_message_id.present? %>
           <div class="m-2 border-l-4 border-gray-600">
@@ -27,7 +31,6 @@
             <div class="ml-2"> <%= message.share_message.content %> </div>
           </div> 
         <% end %>
-       
       </div>
     </div>
     <% if controller_name != "directmsgs"%>
