--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -28,15 +28,18 @@
         </div>
         <% if message.share_message_id.present? %>
           <div class="m-2 border-l-4 border-gray-600">
+
+         </div>
+          <% if message.share_message_id.present? %>
+          <div class="m-2 border-l-4 border-gray-600">
             <div class="ml-2 font-bold"> <%= message.share_message.user.nickname %> </div>
             <div class="ml-2"> <%= message.share_message.content %> </div>
           </div> 
-        <% end %>
+        <% end %>       
         <div class="reaction-emoji" data-target="emoji.reaction">
-          <% message.emoji_data.each do |key, value| %>
-          <span><%= key %></span>
-          <span><%= value.length %></span>
-          <% end %>
+          <div id="message-reaction-<%= message.id %>">
+            <%= render './shared/reaction', message: message %>
+           </div>
         </div>
       </div>
     </div>
