上傳圖片完成

--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -24,9 +24,9 @@
             <div class="hidden check-word absolute inset-y-0 right-0 flex items-center mr-3 text-gray-700" data-target="hello.check">
               255
             </div>              
-          </div>
-          <%= image_tag f.object.image_url if f.object.cached_image_data %>
-          <%= f.hidden_field :image, value: f.object.cached_image_data %>
+          </div>         
+          <%= image_tag @workspace.image_url if @workspace.cached_image_data %>
+          <%= f.hidden_field :image, value: @workspace.cached_image_data %>
           <%= f.file_field :image %>  
           <%= f.submit t("utilities.submit"),
               class:"create-ws-btn cursor-pointer block font-bold text-white px-20 py-2 mb-5 mr-auto bg-green-800 rounded focus:outline-none"
