--- a/app/views/shared/_reaction.html.erb
+++ b/app/views/shared/_reaction.html.erb
@@ -1,5 +1,18 @@
 
 <% message.emoji_data.each do |key, value| %>
-  <button><%= key %></button>
+  <button class="emoji_key"><%= key %></button>
   <span><%= value.length %></span>
 <% end %>
+
+
+let emojiKey = document.querySelector('.emoji_key')
+let value = 0
+let valueTotal = value.length
+
+emoji_key.addEventListener('click',function(){
+
+})
+
+for(let i=0; i<valueTotal; i++){
+  valueTotal+
+}
