--- a/app/views/messages/emoji.js.erb
+++ b/app/views/messages/emoji.js.erb
@@ -1,3 +1,3 @@
-var el = document.getElementById(`message-reaction-${@message.id}`)
-var partial = "<%= j render('reaction', message: @message)%>"
+var el = document.getElementById(`message-reaction-<%= @message.id %>`)
+var partial = "<%= j(render('shared/reaction', message: @message)) %>"
 el.innerHTML = partial
