import ckeditor success

--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -49,4 +49,9 @@
   </div>
 
 </div>
+
+<%# <script src="https://ckeditor.com/apps/ckfinder/3.5.0/ckfinder.js"></script> %>
+
+	
+
 <%= render './channels/new', channel: @new_channel %>
