--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -48,8 +48,14 @@
           </div>
         </div>
         <div class="thread-btn flex">
-          <%= link_to channel_message_threads_path(message.messageable_id, message.id) do %>
-            <i class="far fa-comment-dots"></i>
+          <% if message.messageable_type == "Channel" %>
+            <%= link_to channel_message_threads_path(message.messageable_id, message.id), data: { action: "click->thread#show"} do %>
+              <i class="far fa-comment-dots"></i>
+            <% end %>
+          <% else %>
+            <%= link_to directmsg_message_threads_path(message.messageable_id, message.id), data: { action: "click->thread#show"} do %>
+              <i class="far fa-comment-dots"></i>
+            <% end %>
           <% end %>
           <div class="thread-count pl-2">
             <% if message.children.count > 0 %>
