--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -1,42 +1,26 @@
 <%# 右方資訊區 %>
-<div class="info hidden w-1/6 min-w-200 border-l border-gray-400">
-  <div class="box-border border-b border-gray-400 h-16">
-    <button class="info-cancel">X</button>
-    <h1>Thread</h1>
-    <p>Channel: <%= @channel.name %></p>
-  </div>
-  <div class="parent-message">
-    <div class="author font-bold">
-      <%= @thread.user.nickname %>
+<div class="info right_info hidden w-1/3 min-w-200 border-l border-gray-400">
+  <% if @thread %>
+    <div class="box-border border-b border-gray-400 h-16">
+      <button class="info-cancel">X</button>
+      <h1>Thread</h1>
+      <p>Channel: <%= @channel.name %></p>
     </div>
-    <div class="createtime">
-      <%= @thread.created_at %>
+
+    <%= render 'threads/message_broadcast', message: @thread %>
+
+    <h2 id="thread-count" data-target="subscribe.threadcount" message_id="<%= @thread.id %>" channel_id="<%= @channel.id %>">
+      ===== 有 <%= @thread.children.count %> 則回覆 =====
+    </h2>
+
+    <div class="children-message" data-target="subscribe.threads">
+      <% @thread.children.each do |thread| %>
+        <%= render 'threads/message_broadcast', message: thread %>
+      <% end %>
     </div>
-    <div class="content">
-      <%= @thread.content %>
+
+    <div class="thread-form">
+      <%= render 'threads/threadform' %>
     </div>
-  </div>
-
-  <h2>
-    ===== 有 <%= @thread.children.count %> 則回覆 =====
-  </h2>
-
-  <div class="children-message">
-    <% @thread.children.each do |thread| %>
-      <div class="author font-bold">
-      <%= thread.user.nickname %>
-      </div>
-      <div class="createtime">
-        <%= thread.created_at %>
-      </div>
-      <div class="content">
-        <%= thread.content %>
-      </div>
-    <% end %>
-  </div>
-
-  <div class="thread-form">
-    <%= render 'threads/threadform' %>
-  </div>
-  
+  <% end %>
 </div>
