--- a/app/views/shared/_shareform.html.erb
+++ b/app/views/shared/_shareform.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="w-full px-3 mt-4">
         <%= f.label :messageable_id, "Share with", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-        <%= f.select :messageable_id, options_for_select(@channels.map { |channel| [channel.name, channel.id] }), class:"bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500", style:"width:100%" %>
+        <%= f.select :messageable_id, options_for_select(@channels.map { |channel| [channel.name, channel.id] }) %>
       </div>
     </div>
     <div class="flex flex-wrap mb-6">
