--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -41,7 +41,7 @@
     <%= render './shared/invite_ch' %>
   <% end %>
   <div class="w-full h-full absolute hidden bg-black bg-opacity-25" data-target="uploadfile.newForm">
-    <%= form_with model: @message, url:workspace_uploadedfiles_path(@workspace), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto z-10", data:{action: "ajax:success->uploadfile#submitForm"} do |f|%>
+    <%= form_with model: @message, url:workspace_uploadedfiles_path(@workspace), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto z-10 file-share", data:{action: "ajax:success->uploadfile#submitForm"} do |f|%>
       <div class="flex flex-wrap mb-6">
         <div class="w-full flex share-title justify-between">
           <p class="text-2xl font-bold mt-3 ml-1">Upload the file</p>
@@ -51,8 +51,10 @@
         </div>
         <div class="w-full px-3 mt-4">
           <%= f.label :messageable_id, "Upload to", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-          
-          <%= f.select :messageable_id, options_for_select((@direct_id_nickname + @channel_id_name).map { |channel| [channel[1], channel[0]] }), class:"appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
+          <select name="message[messageable_id]" id="message_messageable_id" channel-select="" >
+            <%= options_for_select((@direct_id_nickname + @channel_id_name)) %> 
+          </select>
+          <%= f.hidden_field :messageable_type, data:{target: "uploadfile.messageable"} %>
         </div>
       </div>
       <div class="flex flex-wrap mb-6">
