--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -19,10 +19,13 @@
             <div class="flex flex-wrap mx-auto justify-center overflow-hidden h-48 rounded relative z-10">
               <%= image_tag file.document.url, class: "w-full" if file.document.mime_type.include? "image" %>
               <%= image_pack_tag "media/images/PDF_file_icon.png" if file.document.mime_type.include? "pdf" %>
-              <div class="">
-                <a href="<%= file.document.download_url(host: "http://localhost:3000/") %>" download= "" class= "absolute right-0" >
+              <div class="absolute right-0">
+                <a href="<%= file.document.download_url(host: "http://localhost:3000/") %>" download= "">
                   <i class="fas fa-cloud-download-alt"></i>
                 </a> 
+                <a href="" data-action="click->uploadfile#shareFormShowUp" file_id="<%= file.id %>" >
+                  <i class="fas fa-share"></i>
+                </a>
               </div>
             </div>
             <div class="truncate">
