--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -13,7 +13,7 @@
         <button data-action="click->uploadfile#newFormShowUp">上傳</button>
       </div>
       <%# 檔案區 %>
-      <div class="messages_area break-all flex flex-wrap overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300 pl-5 pt-5">
+      <div class="file_area break-all flex flex-wrap overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300 pl-5 pt-5" workspace_id="<%= @workspace.id %>">
         <% @files.each do |file| %>
           <div class="file-zone border-gray-600 border-solid border mx-1 rounded w-auto">
             <div class="flex flex-wrap mx-auto justify-center overflow-hidden h-48 rounded relative z-10">
@@ -22,7 +22,7 @@
               <div class="absolute right-0">
                 <a href="<%= file.document.download_url(host: "http://localhost:3000/") %>" download= "">
                   <i class="fas fa-cloud-download-alt"></i>
-                </a> 
+                </a>
                 <a href="" data-action="click->uploadfile#shareFormShowUp" file_id="<%= file.id %>" >
                   <i class="fas fa-share"></i>
                 </a>
@@ -43,36 +43,14 @@
   <% if @channel %>
     <%= render './shared/invite_ch' %>
   <% end %>
-  <div class="w-full h-full absolute hidden bg-black bg-opacity-25" data-target="uploadfile.newForm">
-    <%= form_with model: @message, url:workspace_uploadedfiles_path(@workspace), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto z-10 file-share", data:{action: "ajax:success->uploadfile#submitForm"} do |f|%>
-      <div class="flex flex-wrap mb-6">
-        <div class="w-full flex share-title justify-between">
-          <p class="text-2xl font-bold mt-3 ml-1">Upload the file</p>
-          <div class="cancel-img mt-4 mr-2">
-            <%= inline_svg_pack_tag("media/images/cancel.svg", class:"h-8 w-8 pr-2 cancel", data:{action: "click->uploadfile#closeForm"}) %>
-          </div>
-        </div>
-        <div class="w-full px-3 mt-4">
-          <%= f.label :messageable_id, "Upload to", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-          <select name="message[messageable_id]" id="message_messageable_id" channel-select="" >
-            <%= options_for_select((@direct_id_nickname + @channel_id_name)) %> 
-          </select>
-          <%= f.hidden_field :messageable_type, data:{target: "uploadfile.messageable"} %>
-        </div>
-      </div>
-      <div class="flex flex-wrap mb-6">
-        <div class="w-full px-3">
-            <%= f.label :content, "Message", class:"block tracking-wide text-black-700 text-xl font-bold mb-2" %>
-            <%= f.text_area :content,placeholder: 'Add some message, if you\'d like', size: "20x10",class:"textArea no-resize appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 h-48 resize-none" %>
-        </div>
-      </div>
-      <%= f.fields_for :attachfiles do |file| %>
-        <%= file.file_field :document %>
-      <% end %>
-      <div class="flex flex-row-reverse mb-4 mr-2">
-        <%= f.submit "upload", class:"share-submit shadow bg-teal-400 hover:bg-teal-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
-      </div>
-    <% end %> 
+
+  <div class="w-full h-full absolute hidden bg-black bg-opacity-25 file-share" data-target="uploadfile.shareForm">
+    <%= render './shared/sharefileform', message: @old_message %>
   </div>
+
+  <div class="w-full h-full absolute hidden bg-black bg-opacity-25 file-upload" data-target="uploadfile.newForm">
+    <%= render './shared/sharefileform', message: @message %>
+  </div>
+
 </div>
 <%= render './channels/new', channel: @new_channel %>
