--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -4,16 +4,15 @@
     <div class=" leftbar flex flex-col bg-light_sladock">
       <div class="box-border border-b bg-light_sladock border-sladock_border h-16 flex items-center">
         <div class="ml-5 w-2/4 h-5 px-2 bg-ws_name_purple rounded-full text-white font-bold text-sm truncate" data-target="hello.output"></div>
-      </div>
-      <div class="bg-light_sladock text-white h-left_full" style="width: 300px">
+        </div>
+        <div class="bg-light_sladock text-white h-left_full" style="width: 300px">
       </div>
     </div>
     <div class="flex flex-col flex-grow min-w-0 min-h-0 ml-10">
       <div class=" max-w-2xl py-5">
         <p class=" text-xs my-3"><%= t(".step") %></p>
         <h3 class="text-5xl font-bold leading-tight"><%= t(".name") %></h3>
-        <p class="text-sm mt-3 mb-5"><%= t(".name_detail") %>
-        </p>
+        <p class="text-sm mt-3 mb-5"><%= t(".name_detail") %></p>
         <%= form_with(model: @workspace, url: workspaces_path, local: true, class: "text-xl") do |f| %>
           <div class="relative">
             <%= f.text_field :name, 
