--- a/app/views/shared/_sharefileform.html.erb
+++ b/app/views/shared/_sharefileform.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: message, url:workspace_uploadedfiles_path(@workspace), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto z-10 file_share", data:{action: "ajax:success->uploadfile#submitForm"} do |f|%>
+<%= form_with model: message, url: workspace_uploadedfiles_path(workspace), method: 'post', class:"w-full max-w-lg border-2 rounded-lg bg-white relative m-auto z-10 file-upload", data:{action: "ajax:success->uploadfile#submitForm"} do |f|%>
       <div class="flex flex-wrap mb-6">
         <div class="w-full flex share-title justify-between">
           <p class="text-2xl font-bold mt-3 ml-1">Upload the file</p>
