--- a/app/views/shared/_msgform_direct.html.erb
+++ b/app/views/shared/_msgform_direct.html.erb
@@ -1,7 +1,13 @@
 <%= form_with(model: @message, url:directmsg_messages_path(@directmsg) , class: "flex bg-gray-200 appearance-none border-2 border-gray-200 rounded text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500", id:"new_message", data:{action: "ajax:success->subscribe#clearMsg", target: "subscribe.newMessage"}) do |f| %>
-  <%= f.text_field :content, class:"flex-grow min-w-0", placeholder: t(".placeholder"),autocomplete: "off" %>
-    <%= f.fields_for :attachfiles do |file| %>
-      <%= file.file_field :document %>
-    <% end %>
-  <%= f.submit t("utilities.submit"), class:"bg-gray-500 shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %>
+  <%# <%= f.text_field :content, class:"flex-grow min-w-0 editor", placeholder: t(".placeholder"),autocomplete: "off" %> 
+  <div class="centered">
+    <div class="row row-editor">
+      <div class="editor" placeholder="hi">
+      </div>
+    </div>
+  </div>  
+    <%# <%= f.fields_for :attachfiles do |file| %> 
+      <%# <%= file.file_field :document %> 
+    <%# <% end %> 
+  <%# <%= f.submit t("utilities.submit"), class:"bg-gray-500 shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded" %> 
 <% end %>
